GeneWeb version 3.02
--------------------

* Setup program (gwsetup)
  - [Dec 13, 99] Fixed another problem of images displaying with still
    another browser (see version 3.01).

* GeneWeb Service/CGI (gwd)
  - [Dec 17, 99] Added <meta http-equiv...> in headers of all generated
    pages to be compatible with all browsers.
  - [Dec 16, 99] Fixed bug: the ";opt=no_index" did not work correctly
    when the URL hold special characters.
  - [Dec 15, 99] Added things to be able to translate correctly the
    noun complement ("x of y") in Finnish which sucks in the present
    version.
  - [Dec 14, 99] In relationship links with option "by marriage" does not
    display the consanguinity (0%) any more if all relations found are by
    marriage.
  - [Dec 14, 99] Fixed bug: in relationship links, with option
    "relationship by marriage", when several branches, sometimes did not
    display the persons (sometimes only the spouses, sometimes branches
    were missing).
  - [Dec 13, 99] In tree displays with several branches, add the spouse(s)
    of the top person(s).
  - [Dec 13, 99] Fixed bug: when merging two persons, the godchildren,
    possible children, foster children (and so on...) of the second
    person were not transferred to the first person (problem only
    with "children" relations, not "parents").
  - [Dec 10, 99] In tree displays with several branches, the option
    "add spouses" did not work. Fixed.

* GeneWeb uncompiler (gwu) and GeneWeb to gedcom (gwb2ged)
  - [Dec 13, 99] Fixed bug: the option '-s' (extraction of a surname)
    also selected children with different surnames.

* Lexicon (lang/lexicon.txt) and welcome pages (lang/*/start.txt)
  - [Dec 18, 99] Fixed and completed some Norwegian phrases (Brynjulf
    Langballe)
  - [Dec 17, 99] Fixed and completed some German phrases (Marcus Zelezny)

* Base configuration files (base.gwf)
  - [Dec 17, 99] Added variable "highlight_color", by default #2f6400