@@ -1,4 +1,4 @@
-(* $Id: wserver.mli,v 3.0 1999-10-29 10:31:51 ddr Exp $ *)
+(* $Id: wserver.mli,v 3.1 1999-12-19 09:14:15 ddr Exp $ *)
 (* Copyright (c) INRIA *)
 
 (* module [Wserver]: elementary web service *)
@@ -54,6 +54,11 @@ value extract_param : string -> char -> list string -> string;
        Answers the empty string if the parameter is not found. *)
 
 value get_request_and_content : Stream.t char -> (list string * string);
+
+ifdef WIN95 then
+value sock_in : ref string;
+ifdef WIN95 then
+value sock_out : ref string;
 
 (* Example:
 
